# snforacle

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/finite-field/: index.html
api/integer/: index.html
api/polynomial/: index.html
backends/: index.html
benchmarks/: bench.py  bench_large.py  calibrate_pari.py  results.csv
changelog/: index.html
contributing/: index.html
docs/: backends.md  gen_schemas.py  index.md  input-formats.md  quickstart.md
docs/api/: finite-field.md  integer.md  polynomial.md
docs/javascripts/: asciinema-init.js
input-formats/: index.html
quickstart/: index.html
schemas/: index.html
search/: search_index.json
snforacle/: __init__.py  ff_interface.py  ff_schema.py  interface.py  poly_interface.py  poly_schema.py  schema.py
snforacle/backends/: __init__.py  base.py  cypari2.py  ff_base.py  flint.py  flint_ff.py  magma.py  magma_ff.py  magma_poly.py  pari_cache_table.json  poly_base.py  pure_python.py  pure_python_ff.py  pure_python_poly.py  sage.py  sage_ff.py  sage_poly.py
tests/: _mathelpers.py  conftest.py  test_cypari2.py  test_evil.py  test_evil2.py  test_evil3.py  test_evil4.py  test_evil_ff.py  test_evil_int.py  test_evil_poly.py  test_flint.py  test_flint_ff.py  test_hardcode.py  test_magma.py  test_magma_ff.py  test_magma_poly.py  test_pure_python.py  test_pure_python_ff.py  test_pure_python_poly.py  test_random_crossbackend.py  test_sage.py  test_sage_ff.py  test_sage_poly.py
tools/: generate_asciinema.py
