[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snforacle"
version = "0.1.0"
description = "Smith normal form via a uniform JSON interface across multiple backends"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
cypari2 = ["cypari2>=2.2"]
flint = ["python-flint>=0.8.0"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["snforacle*"]
