[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snforacle"
version = "0.1.0"
description = "Smith normal form, Hermite normal form, and elementary divisors for integer, polynomial, and finite-field matrices via a uniform Python API with pluggable backends."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]
keywords = ["smith normal form", "hermite normal form", "elementary divisors", "invariant factors", "integer matrices", "polynomial matrices", "finite field", "linear algebra"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://antieau.github.io/snforacle"
Repository = "https://github.com/antieau/snforacle"
Issues = "https://github.com/antieau/snforacle/issues"
Documentation = "https://antieau.github.io/snforacle"

[project.optional-dependencies]
cypari2 = ["cypari2>=2.2"]
flint = ["python-flint>=0.8.0"]
dev = ["pytest", "pytest-cov", "numpy"]
docs = ["mkdocs>=1.6,<2", "mkdocs-material>=9.5,<10", "mkdocstrings[python]>=0.25", "mkdocs-gen-files>=0.5", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["snforacle*"]

[tool.setuptools.package-data]
snforacle = ["py.typed", "backends/pari_cache_table.json"]
